...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartNewGame">


    <EditText
        android:id="@+id/Player1_EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/Player1"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/Player2_EditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EnterPlayerTextView" />

    <EditText
        android:id="@+id/Player2_EditText"
...
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/Player2"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/Player3_EditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Player1_EditText" />


    <EditText
...
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/Player3"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/Player4_EditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Player2_EditText" />

    <EditText
        android:id="@+id/Player4_EditText"
...
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="50dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/Player4"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/StartNewGameButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Player3_EditText" />

    <TextView
        android:id="@+id/EnterPlayerTextView"
...
